--- a/teams.html
+++ b/teams.html
@@ -167,7 +167,7 @@ $( document ).ready(function() {
 </head>
 <body>
 <figure class="snip1190">
-  <img src="https://raw.githubusercontent.com/imdadareeph/aws-sqs-springboot/master/src/main/resources/static/screenshots/1.png" alt="sample64"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/falcon.png" alt="sample64"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -178,7 +178,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-  <img src="https://raw.githubusercontent.com/imdadareeph/aws-sqs-springboot/master/src/main/resources/static/screenshots/1.png"" alt="sample75"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/falcon.png"" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -189,7 +189,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190">
-  <img src="https://raw.githubusercontent.com/imdadareeph/aws-sqs-springboot/master/src/main/resources/static/screenshots/1.png"" alt="sample75"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/swift.jpg"" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -200,7 +200,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-  <img src="https://raw.githubusercontent.com/imdadareeph/aws-sqs-springboot/master/src/main/resources/static/screenshots/1.png"" alt="sample75"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/woodpecker.jpg"" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -211,7 +211,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/aws-sqs-springboot/master/src/main/resources/static/screenshots/1.png"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/phoenix.jpg"" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -222,7 +222,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/aws-sqs-springboot/master/src/main/resources/static/screenshots/1.png"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/hawk.jpg"" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -233,5 +233,85 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 
+
+<br/>
+
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/kite.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span> Kite</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/penguin.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span>Penguin</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/flamingo.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span> Flamingo</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/raven.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span> Raven</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/sparrow.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span> Jacksparrow</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/cardinal.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span> cardinal</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
+<figure class="snip1190 hover">
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/thunderbird.jpg"" alt="sample75"/>
+  <figcaption>
+    <div class="square">
+      <div></div>
+    </div>
+    <h2> Team <span> Thunderbird</span></h2>
+    <p>DSAS</p>
+  </figcaption>
+  <a href="#"></a>
+</figure>
 </body>
 </html>
