--- a/teams.html
+++ b/teams.html
@@ -167,7 +167,7 @@ $( document ).ready(function() {
 </head>
 <body>
 <figure class="snip1190">
-  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/falcon.png" alt="sample64"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/falcon.jpg" alt="sample64"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -178,7 +178,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/falcon.png"" alt="sample75"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/falcon.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -189,7 +189,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190">
-  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/swift.jpg"" alt="sample75"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/swift.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -200,7 +200,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/woodpecker.jpg"" alt="sample75"/>
+  <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/woodpecker.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -211,7 +211,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/phoenix.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/phoenix.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -222,7 +222,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/hawk.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/hawk.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -237,7 +237,7 @@ $( document ).ready(function() {
 <br/>
 
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/kite.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/kite.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -248,7 +248,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/penguin.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/penguin.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -259,7 +259,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/flamingo.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/flamingo.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -270,7 +270,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/raven.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/raven.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -281,7 +281,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/sparrow.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/sparrow.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -292,7 +292,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/cardinal.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/cardinal.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
@@ -303,7 +303,7 @@ $( document ).ready(function() {
   <a href="#"></a>
 </figure>
 <figure class="snip1190 hover">
-   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/thunderbird.jpg"" alt="sample75"/>
+   <img src="https://raw.githubusercontent.com/imdadareeph/cdn/master/IMG/thunderbird.jpg" alt="sample75"/>
   <figcaption>
     <div class="square">
       <div></div>
